# gitix

./: Cargo.toml  README.md  go.mod  main.go  menu.go
examples/: theme_demo.rs
save/: save.go
src/: app.rs  config.rs  files.rs  git.rs  lib.rs  main.rs  tui.rs
src/tui/: files.rs  mod.rs  overview.rs  save_changes.rs  settings.rs  status.rs  theme.rs  update.rs
