[package]
name = "gitix"
version = "0.1.0"
edition = "2024"

[dependencies]
ratatui = { version = "0.29", features = ["widget-calendar"] }
crossterm = "0.29"
gix = { version = "0.72", features = ["index", "worktree-mutation", "status"] }
chrono = "0.4"
time = "0.3"
gix-status = "0.19"
gix-index = "0.40"
gix-object = "0.49"
tui-textarea = "0.7"
