[package]
name = "gitix"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gitix"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
crossterm = "0.28.1"
gix = { version = "0.72", features = ["status", "index"] }
git2 = { version = "0.20", default-features = false, features = [
  "vendored-openssl",
] }
chrono = "0.4"
time = "0.3"
gix-status = "0.19"
gix-index = "0.40"
gix-object = "0.49"
tui-textarea = "0.7"
catppuccin = { version = "2.5.1", features = ["ratatui"] }

[[example]]
name = "theme_demo"
path = "examples/theme_demo.rs"
